--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -82,7 +82,7 @@ a {
 header {
     background: white;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-    width:100vw;
+    width:100%;
     position: sticky;
     top: 0;
     z-index: 100;
@@ -153,6 +153,11 @@ nav ul li a.active {
     color: var(--primary-color);
     background-color: rgba(52, 152, 219, 0.1);
 }
+.hamburger{
+    display: none;
+}
+
+
 
 /* Responsive adjustment */
 @media (max-width: 768px) {
@@ -170,9 +175,15 @@ nav ul li a.active {
         font-size: 1.5rem;
     }
     
-    nav ul li a {
-        padding: 8px 12px;
+    nav  {
+        display: none;
     }
+    .hamburger{
+        display: block;
+        color:#1a252f;
+        font-size: 1.5rem;
+    }
+    
 }
 
 
