--- a/stylesheets/home.css
+++ b/stylesheets/home.css
@@ -1,9 +1,12 @@
 /* Hero Section */
 
 .hero {
+  
+  width:100%;
+  height:500px;
   background-image: url("/images/home1.jpg");
-  background-size: cover;
-  background-position: center;
+  background-size:cover;
+  background-position: top;
   background-repeat: no-repeat;
   color: white;
   text-align: center;
@@ -13,10 +16,45 @@
   transition: background-image 1s linear;
 }
 
-.hero h2 {
+@media  (max-width:600px) {
+
+  .hero{
+    width: 100%;
+    height:400px;
+  }
+.hero span {
   font-size: 2.5rem;
+  font-weight: 100;
   margin-bottom: 20px;
 }
+
+.hero p {
+  font-size: 1rem;
+  margin-bottom: 30px;
+  max-width: 700px;
+  margin: auto 0;
+}
+
+#typewriting{
+     font-size:2rem;
+}
+
+.btn{
+  margin-top: 1rem;
+}
+
+  
+}
+
+@media (min-width:600px) {
+  .btn{
+  margin-top: 1rem;
+}
+}
+
+
+
+
 
 .hero span {
   font-size: 2.5rem;
@@ -38,8 +76,7 @@
   font-size: 1.2rem;
   margin-bottom: 30px;
   max-width: 700px;
-  margin-left: auto;
-  margin-right: auto;
+  margin:0 auto;
 }
 
 .btn {
